# BetterNTE

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md
.github/workflows/: build-opencv-minimal.yml  mirrorchyan_release.yml  mirrorchyan_release_note.yml
crates/betternte-capture/: Cargo.toml
crates/betternte-capture/examples/: capture_compare.rs  capture_htgame.rs  capture_smoke.rs
crates/betternte-capture/src/: bitblt.rs  buffer.rs  dxgi_dup.rs  error.rs  factory.rs  frame_pool.rs  lib.rs  print_window.rs  screen_dc.rs  wgc.rs  win32_helper.rs  window.rs
crates/betternte-client/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/betternte-client/src/: App.tsx  globals.css  main.tsx
crates/betternte-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/betternte-client/src-tauri/capabilities/: default.json
crates/betternte-client/src-tauri/icons/: icon.icns
crates/betternte-client/src-tauri/nsis/: installer.nsh
crates/betternte-client/src-tauri/src/: hotkeys.rs  lib.rs  main.rs
crates/betternte-client/src-tauri/src/commands/: engine.rs  flows.rs  input.rs  mod.rs  replay.rs  scripts.rs  settings.rs
crates/betternte-client/src/components/: ConfirmDialog.tsx  DebugPanel.tsx  ErrorDialog.tsx  FloatingLogLayer.tsx  LogDrawer.tsx  NewGroupDialog.tsx  PathTree.tsx  SchemaForm.tsx  ScriptManifestMeta.tsx  WindowPickerDialog.tsx
crates/betternte-client/src/lib/: hotkeyTriggers.ts  mock.ts  replayVerify.ts  store.ts  treePaths.ts  types.ts  useDeveloperMode.ts  utils.ts
crates/betternte-client/src/pages/: FlowEditorPage.tsx  HomePage.tsx  InputTestPage.tsx  LogPage.tsx  OneDragonFlow.tsx  ScriptDebugPage.tsx  ScriptManager.tsx  ScriptStore.tsx  Settings.tsx  (+2 more)
crates/betternte-core/: Cargo.toml
crates/betternte-core/src/: capture.rs  consts.rs  data_root.rs  error.rs  event.rs  image.rs  input.rs  lib.rs  notify_trait.rs  replay.rs  script.rs  task.rs  vision.rs  window.rs
crates/betternte-core/src/config/: loader.rs  mod.rs
crates/betternte-engine/: Cargo.toml
crates/betternte-engine/src/: builder.rs  capture.rs  debug_ctx.rs  event.rs  flow_runner.rs  lib.rs  loader.rs  notify_builder.rs  replay_playback.rs  replay_recorder.rs  replay_verify.rs  script_ctx.rs  scripts.rs  task_groups.rs  watcher.rs
crates/betternte-helper/: Cargo.toml
crates/betternte-helper/examples/: platform_check.rs
crates/betternte-helper/src/: directory.rs  encoding.rs  lib.rs  math.rs  process.rs  regex.rs  string.rs  time.rs  windows.rs
crates/betternte-input/: Cargo.toml
crates/betternte-input/src/: action.rs  adb.rs  config.rs  controller.rs  error.rs  factory.rs  failover.rs  key.rs  lib.rs  linux.rs  macos.rs  mapper.rs  queue.rs  queued_controller.rs  recorder.rs  recording_controller.rs  target.rs  tests.rs  win32.rs
crates/betternte-notify/: Cargo.toml
crates/betternte-notify/src/: lib.rs
crates/betternte-overlay/: Cargo.toml
crates/betternte-overlay/examples/: overlay_test.rs
crates/betternte-overlay/src/: config.rs  draw_content.rs  drawable.rs  drawing.rs  error.rs  lib.rs  manager.rs  renderer.rs  window.rs
crates/betternte-relay/: Cargo.toml
crates/betternte-relay/src/: main.rs
crates/betternte-runtime/: Cargo.toml
crates/betternte-runtime/src/: condition.rs  condition_handlers.rs  error.rs  executor.rs  lib.rs  parser.rs  perf_log.rs  pipeline_tools.rs  sandbox.rs  step_handlers.rs  trigger.rs  types.rs  variables.rs
crates/betternte-script/: Cargo.toml
crates/betternte-script/src/: engine.rs  error.rs  lib.rs  loader.rs  manifest.rs  manifest_permissions.rs  plugin.rs  runtime.rs
crates/betternte-script/src/quickjs/: bridge.rs  mod.rs  script.rs  value.rs
crates/betternte-vision/: Cargo.toml
crates/betternte-vision/examples/: bench_infer.rs  bench_ocr.rs  bench_template_speed.rs  lightglue_match.rs  mobilenet_classify.rs  paddleocr_recognize.rs  superpoint_features.rs  test_cuda_ep.rs  test_ocr.rs  yolo_detect.rs
crates/betternte-vision/src/: color.rs  config.rs  error.rs  image_utils.rs  lib.rs  mat_cache.rs  pixel_math.rs
crates/betternte-vision/src/classify/: color_range.rs  histogram.rs  mod.rs
crates/betternte-vision/src/contour/: analysis.rs  filter.rs  finder.rs  mod.rs
crates/betternte-vision/src/feature/: matching.rs  mod.rs
crates/betternte-vision/src/geometry/: homography.rs  mod.rs  warp.rs
crates/betternte-vision/src/models/: classifier.rs  detector.rs  mod.rs  ocr.rs  session.rs  superpoint.rs
crates/betternte-vision/src/morphology/: mod.rs  ops.rs
crates/betternte-vision/src/template/: cache.rs  mod.rs  opencv_matcher.rs
data/plugins/nte/: manifest.json
data/plugins/test-ffi-plugin/: build.sh  manifest.json  plugin.c
data/plugins/test-js-plugin/: index.js  manifest.json
data/plugins/test-wasm-plugin/: manifest.json  plugin.wasm  plugin.wat
devlog/: 2026-05-09-notify-plugin-refactor.md  2026-05-09-wasm-plugin.md
docs/: development.md  development_EN.md  scripting-guide.md  scripting-guide_EN.md
docs/devlog/: 2026-05-09-plugin-system.md  20260509-095000-remove-permission-system.md  20260509-100000-add-relay-and-web-editor.md  20260509-103000-remove-plugin-system.md  20260509-110000-three-directory-merge.md  20260509-142100-hot-reload-user-dir.md  20260509-163000-enhance-plugin-system.md
tools/key-recorder/: Cargo.toml
tools/key-recorder/src/: main.rs
tools/window-pixel-studio/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tools/window-pixel-studio/src/: App.tsx  globals.css
tools/window-pixel-studio/src-tauri/: Cargo.toml  tauri.conf.json
tools/window-pixel-studio/src-tauri/capabilities/: default.json
tools/window-pixel-studio/src-tauri/src/: lib.rs  main.rs  stitch.rs  xcap_capture.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: StatusBar.tsx  Toolbar.tsx
web/src/hooks/: useRelay.ts
web/src/stores/: flowStore.ts
web/src/utils/: flowConverter.ts
(+81 files in other folders)
