[package]
name = "betternte-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, config, and shared abstractions"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
image = "0.25"
opencv = { workspace = true }
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
