[package]
name = "betternte-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Input simulation (SendInput, PostMessage, ADB, Minitouch)"

[dependencies]
betternte-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Input simulation
enigo.workspace = true

# Win32 API
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
serde_json.workspace = true
