[package]
name = "betternte-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Overlay window and drawing API for BetterNTE"

[dependencies]
betternte-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Win32 API (Windows only)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tokio = { workspace = true }

[[example]]
name = "overlay_test"
