[package]
name = "betternte-script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Script engine abstraction with multiple runtime support (QuickJS, Lua, JSON)"

[dependencies]
betternte-core.workspace = true
betternte-capture.workspace = true
betternte-vision.workspace = true
betternte-input.workspace = true
rquickjs.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
wasmtime.workspace = true
semver = "1.0"

[dev-dependencies]
tempfile = "3"
