[package]
name = "window-pixel-studio"
version = "0.1.0"
description = "Standalone window screenshot and color picker (Tauri)"
edition = "2021"

[lib]
name = "window_pixel_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
xcap = { version = "0.9", features = ["wgc"] }

# Core capture engine (client-area-only via PrintWindow)
betternte-capture = { path = "../../../crates/betternte-capture" }
betternte-core = { path = "../../../crates/betternte-core" }
tokio = { version = "1", features = ["full"] }
image = "0.25"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
